# slackbolt

./: LICENSE  README.md  app.py  clickup.py  pyproject.toml  slack.py
src/: actions.py  app_home.json  app_home.py  database.py  slack.py  task_tracker.py  views.py
src/stage_1/: events.py
src/stage_2/: actions.py  app_home.py  views.py
src/stage_2/views/: app_home.json
src/stage_3/: access_client.py  change_client.py  client_select.py  project_select.py  promote_data.py  refresh_tables.py
src/stage_3/views/: access_client.json  app_home.json  change_client.json  promote_data.json  refresh_tables.json
src/views/: app_home.json  stage_2_create_task.json
tests/integration/: test_task_tracker.py
tests/unit/: test_events.py
